2008-01-28  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_hash_create, _gids_user_to_uid):
	  Fixed bug (found by coverity) where _gids_user_to_uid() returned a
	  signed int identifying the uid (on success) or -1 (on error).  This
	  value was first assigned directly to an unsigned uid_t and then
	  tested for error.  But since the var was unsigned, the test would
	  always eval to true.

2008-01-09  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright date range.

2007-10-10  Chris Dunlap  <cdunlap@llnl.gov>

	* DISCLAIMER.LLNS, DISCLAIMER.UC: Updated.

2007-10-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Updated to conman r806.
	  Added support for Debian Etch & Ubuntu Edgy.
	  Renamed OPTIONS to DAEMON_ARGS.  Renamed SERVICE_NAME to SCRIPT_NAME.
	  Redirected ERRMSG to stderr.  Forced removal of PIDFILE on stop.
	  Replaced query_exec() with type.  Added log_init() and log_fini().
	  Added check for "dead" status if process not found & pidfile exists.
	* src/etc/munge.sysconfig: Renamed OPTIONS to DAEMON_ARGS.

2007-10-05  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright info for LLNS.

2007-10-03  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Added openssl-devel, bzip2-devel, and zlib-devel
	  BuildRequires for mock builds.

2007-09-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Fixed bug with RH_SUBSYS referencing the init
	  script name instead of the executable daemon name.

	* src/etc/munge.init.in: Fixed bug with SERVICE_NAME not removing the
	  leading /[SK][0-9]+/, thereby causing the sysconfig file to be
	  ignored at boot (when referenced via "/etc/rc5.d/S40munge").

2007-04-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am: Fixed bug in install-data-local target that
	  caused installation of munge.sysconfig to be considered new if
	  munge.init had changed.

	* src/etc/Makefile.am: Changed munge.sysconfig install perms to 0644.

2007-02-05  Chris Dunlap  <cdunlap@llnl.gov>